<resources>

    <!-- Sign up -->
    <string name="login">Login</string>
    <string name="sign_up">Register</string>
    <string name="forgot_pass"><u>Forgot password?</u></string>

    <!-- Buttons-->
    <string name="btn_submit">Submit</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="register">Register</string>


    <!-- Modules -->
    <string name="mod_login">Login</string>


    <string name="user_panel">Services</string>


    <!-- Nav drawer -->
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!-- Top left menu -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- input fields and  Hints -->
    <string name="email">Email address</string>
    <string name="password">Passcode</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="server_not_responding">Server not responding, try again</string>

    <string name="no_internet">No Internet</string>
    <string name="internet_required">Internet connection is required!</string>

    <string name="process_dialog_title">Please Wait</string>

    <string name="swahili_language">Swahili</string>
    <string name="english_language">English</string>
    <string name="we_are_happy_to_see_u">We are happy to see you again</string>
    <string name="not_a_member">You don\'t have an account?</string>
    <string name="user_details">Let us know you</string>
    <string name="password_required">Passcode is required</string>
    <string name="wrong_password">Wrong passcode</string>
    <string name="password_did_not_match">Passcode did not match</string>
    <string name="welcome">Welcome</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="confirm">Confirm</string>

    <string name="customize">Customize</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="greeting_message">what can we do for you today?</string>
    <string name="personal_info">Personal Information</string>
    <string name="app_name_desc">2 Urban Sister\'s</string>
    <string name="bill_amount">Amount</string>
    <string name="history">History</string>
    <string name="email_address_required">Email address is required</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="add">Add</string>
    <string name="language">Choose your preferred language</string>
    <string name="changelang">Change Language</string>
    <string name="amount_required">Amount is required</string>
    <string name="accounts">Accounts</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="app_name" translatable="false">2 Urban Sister\'s</string>
    <string name="name">Name</string>
    <string name="name_required">Name is required</string>
    <string name="password_characters">Passcode must be at least 6 characters</string>
    <string name="phone_required">Mobile number is required</string>
    <string name="phone">Mobile Number</string>
    <string name="hair_extension">Hair Extension</string>
    <string name="orders">Orders</string>
    <string name="mod_profile">Profile</string>
    <string name="update">Update</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="not_registered">User not registered</string>
    <string name="image_required">Image is required</string>
    <string name="title_required">Title is required</string>
    <string name="price_required">Price is required</string>
    <string name="description_required">Description is required</string>
    <string name="uploaded_successfully">Uploaded Successfully</string>
    <string name="buy">Buy</string>
    <string name="complete_order">Complete Order</string>
    <string name="no_products_available">Products not available</string>
    <string name="no_order_placed">You have not placed any order</string>


</resources>
