<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/confirm"
            android:textSize="22sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/confirm_delete"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="40dp"
                android:background="@drawable/btn_style_glass"
                android:text="@string/btn_no"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="40dp"
                android:background="@drawable/btn_style"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_yes"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>