<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/chk_english"
                android:layout_width="0dp"
                android:layout_weight=".28"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:text="@string/english_language"/>

            <RadioButton
                android:id="@+id/chk_swahili"
                android:layout_width="0dp"
                android:layout_weight=".32"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:text="@string/swahili_language"/>

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
