<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <include
            layout="@layout/layout_header"/>

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_layout_gradient_coneredge"
            android:orientation="vertical"
            android:layout_below="@id/layout_header"
            android:padding="10dp"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:layout_marginTop="1dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_are_happy_to_see_u"
                android:textColor="@color/text_color"
                android:layout_marginTop="2dp"
                android:textSize="16sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@drawable/edittext_border">

                        <EditText
                            android:id="@+id/etxt_email_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="5dp"
                            android:textColor="@color/black"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/hint_etxt_email_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textSize="10sp"
                        android:text="@string/email"
                        android:visibility="gone"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@drawable/edittext_border">

                        <EditText
                            android:id="@+id/etxt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_locked"
                            android:drawablePadding="5dp"
                            android:textColor="@color/black"
                            android:hint="@string/password"
                            android:inputType="numberPassword" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/hint_etxt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textSize="10sp"
                        android:text="@string/password"
                        android:visibility="gone"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="start"
                        android:gravity="center_vertical"
                        android:text="@string/forgot_pass"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:onClick="onClickForgotPassword" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_style"
                            android:layout_alignParentEnd="true"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_alignParentEnd="true"
                                android:gravity="center"
                                android:background="@null"
                                android:textColor="@color/white"
                                android:text="@string/login"
                                android:onClick="onClickLogin" />

                            <ProgressBar
                                android:id="@+id/progress"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:visibility="gone"/>

                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp"
                    android:padding="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="1dp"
                        android:layout_marginEnd="3dp"
                        android:background="@color/text_color"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_a_member"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:onClick="onClickRegister" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="1dp"
                        android:layout_marginStart="3dp"
                        android:background="@color/text_color"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
