<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/layout_header"/>

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_layout_gradient_coneredge"
            android:orientation="vertical"
            android:layout_below="@id/layout_header"
            android:padding="10dp"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_details"
                android:textColor="@color/text_color"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/txt_view_style"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Register As"/>

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/customer"
                            android:layout_width="0dp"
                            android:layout_weight=".5"
                            android:layout_height="wrap_content"
                            android:text="Customer"
                            android:checked="true"/>

                        <RadioButton
                            android:id="@+id/admin"
                            android:layout_width="0dp"
                            android:layout_weight=".5"
                            android:layout_height="wrap_content"
                            android:text="Admin" />
                    </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border">

                    <EditText
                        android:id="@+id/etxt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:hint="@string/name"
                        android:inputType="textPersonName" />
                </LinearLayout>
                <TextView
                    android:id="@+id/hint_etxt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="10sp"
                    android:text="@string/name"
                    android:visibility="gone"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border">

                    <EditText
                        android:id="@+id/etxt_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="numberPassword" />
                </LinearLayout>
                <TextView
                    android:id="@+id/hint_etxt_mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="10sp"
                    android:text="@string/phone"
                    android:visibility="gone"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border">

                    <EditText
                        android:id="@+id/etxt_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </LinearLayout>
                <TextView
                    android:id="@+id/hint_etxt_email_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="10sp"
                    android:text="@string/email"
                    android:visibility="gone"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@drawable/edittext_border">

                        <EditText
                            android:id="@+id/etxt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:textColor="@color/black"
                            android:hint="@string/password"
                            android:inputType="numberPassword" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/hint_etxt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textSize="10sp"
                        android:text="@string/password"
                        android:visibility="gone"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".01"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@drawable/edittext_border">

                        <EditText
                            android:id="@+id/etxt_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:textColor="@color/black"
                            android:hint="@string/confirm_password"
                            android:inputType="numberPassword" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/hint_etxt_confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textSize="10sp"
                        android:text="@string/confirm_password"
                        android:visibility="gone"/>
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:gravity="center"
                        android:background="@drawable/btn_style"
                        android:textColor="@color/white"
                        android:text="@string/register"
                        android:onClick="onClickRegisterUser" />

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:visibility="gone"/>

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
